# qoqo-qir

./: .buildinfo  .gitignore  CHANGELOG.md  CONTRIBUTE.md  Cargo.toml  README.md  deny.toml  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.github/: dependabot.yml
.github/workflows/: hqs-build-deploy-rust-pyo3.yml  hqs-build-deploy-sphinx-doc-rust-pyo3.yml  hqs-ci-test-rust-pyo3.yml  manual-qoqo-qir-upload-cratesio.yml  manual-qoqo-qir-upload-pypi.yml
_sources/: index.rst.txt
_static/: documentation_options.js
qoqo_qir/: Cargo.toml  README.md  pyproject.toml
qoqo_qir/docs/: conf.py
qoqo_qir/python_tests/: requirements.txt  test_qasm.py  test_qir.py
qoqo_qir/qoqo_qir/: DEPENDENCIES  __init__.py
qoqo_qir/src/: backend.rs
qoqo_qir/tests/: backend.rs
roqoqo-qir/: Cargo.toml  README.md
roqoqo-qir/src/: backend.rs  interface.rs
roqoqo-qir/tests/: backend.rs  interface.rs  main.rs
